fix overflow issue
git-svn-id: svn+ssh://svn.vasista.in/srv/svn/repos/kmf/trunk@22 40d85018-ee8e-4105-aa2c-066e80ea2389

--- a/framework/images/webapp/images/jquery/plugins/steps/jquery.steps.css
+++ b/framework/images/webapp/images/jquery/plugins/steps/jquery.steps.css
@@ -1,4 +1,4 @@
-﻿/*
+/*
     Common 
 */
 
@@ -57,6 +57,7 @@
     position: relative;
     display: block;
     width: 100%;
+    overflow: auto;
 }
 
 .wizard.vertical > .steps
